--- a/SVNproject/trunk/css/index.css
+++ b/SVNproject/trunk/css/index.css
@@ -28,6 +28,9 @@
 .topbar .container p:nth-child(2){
     margin-right: 10px;
 }
+.topbar .container p:nth-child(2) a{
+    color: red;
+}
 /* 第二个p标签 下面的标题和注册 */
 .topbar .container p:nth-child(2) .title,.topbar .container p:nth-child(2) .register{
     color:#ff6700;
@@ -427,47 +430,557 @@
 }
 /* 6.---------------------------服装--------------------------- */
 .clothes{
-    height: 500px;
+    height: 570px;
     margin-top: 30px;
-    background-color: green;
+}
+/* 上部盒子 */
+.clothes .top-box{
+    width: 1200px;
+    height: 500px;
+}
+/* 顶部 */
+.clothes .top-box .upper{
+    width: 1200px;
+    height: 40px;
+    line-height: 41px;
+    background-color: #fff;
+    border-bottom: 6px solid #ff6700;
+}
+/* 标题 */
+.clothes .top-box .upper .title{
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700
+}
+/* 右侧标题导航 */
+.clothes .top-box .upper  ul li{
+    float: left;
+    font-size: 18px;
+    width: 100px;
+    text-align: center;
+}
+/* 右侧激活类 */
+.clothes .top-box .upper  ul li.activ{
+    background-color: #ff6700;
+    color: #fff;
+}
+/* 中间部分 */
+.clothes .middle{
+    width: 1200px;
+    height: 500px;
+    text-align: center;
+}
+/* 左边玩命约会 */
+.clothes .middle .middle-left{
+    width: 240px;
+    height: 500px;
+    background-color: #f9f9f9;
+}
+.clothes .middle .middle-left .left-img{
+    width: 240px;
+    height: 353px;
+}
+.clothes .middle .middle-left .bottom-text{
+    width: 236px;
+    height: 160px;
+}
+.clothes .middle .middle-left .bottom-text ul{
+    width: 235px;
+    height: 160px;
+    margin: 1px;
+}
+.clothes .middle .middle-left .bottom-text ul li{
+    float: left;
+    width: 78px;
+    height: 40px;
+    line-height: 40px;
+    text-indent: 5px;
+}
+/* 中间轮播 */
+.clothes .middle .middle-play{
+    width: 430px;
+    height: 500px;
+    position: relative;
+}
+/* 七夕 */
+.clothes .middle .middle-play .bottom-moon{
+    width: 430px;
+    height: 160px;
+    position: absolute;
+    bottom: 0px;
+}
+/* 右边凉季 */
+.clothes .middle .middle-list{
+    width: 530px;
+    height: 500px;
+    background-color: #ccc;
+}
+.clothes .middle .middle-list ul li{
+    float: left;
+    width: 174px;
+    height:340px;
+    background-color: #fff;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+.clothes .middle .middle-list ul li.img-index{
+    width: 174px;
+    height: 156px;
+}
+/* 下部盒子 */
+.clothes .middle-bottom{
+    width: 1200px;
+    height: 60px;
+}
+.clothes .middle-bottom ul li{
+    width:120px;
+    height:60px;
+    float:left;
 }
 /* 7.---------------------------户外运动 ---------------------------*/
 .sport{
+    height: 570px;
+    margin-top:50px;
+}
+/* 上部盒子 */
+.sport .top-box{
+    width: 1200px;
     height: 500px;
-    background-color: #726d6d;
+}
+/* 顶部 */
+.sport .top-box .upp{
+    width: 1200px;
+    height: 40px;
+    line-height: 41px;
+    background-color: #fff;
+    border-bottom: 6px solid #ff6700;
+}
+/* 标题 */
+.sport .top-box .upp .title{
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700
+}
+/* 右侧标题导航 */
+.sport .top-box .upp  ul li{
+    float: left;
+    font-size: 18px;
+    width: 100px;
+    text-align: center;
+}
+/* 右侧激活类 */
+.sport .top-box .upp  ul li.activ{
+    background-color: #ff6700;
+    color: #fff;
+}
+/* 中间部分 */
+.sport .midd{
+    width: 1200px;
+    height: 500px;
+    text-align: center;
+}
+/* 左边玩命约会 */
+.sport .midd .middle-left{
+    width: 240px;
+    height: 500px;
+    background-color: #f9f9f9;
+}
+.sport .midd .middle-left .left-img{
+    width: 240px;
+    height: 353px;
+}
+.sport .midd .middle-left .bottom-text{
+    width: 236px;
+    height: 160px;
+}
+.sport .midd .middle-left .bottom-text ul{
+    width: 235px;
+    height: 160px;
+    margin: 1px;
+}
+.sport .midd .middle-left .bottom-text ul li{
+    float: left;
+    width: 78px;
+    height: 40px;
+    line-height: 40px;
+    text-indent: 5px;
+}
+/* 中间轮播 */
+.sport .midd .middle-play{
+    width: 430px;
+    height: 500px;
+    position: relative;
+}
+/* 七夕 */
+.sport .midd .middle-play .bottom-sport{
+    width: 430px;
+    height: 160px;
+    position: absolute;
+    bottom: 0px;
+}
+/* 右边凉季 */
+.sport .midd .middle-list{
+    width: 530px;
+    height: 500px;
+    background-color: #ccc;
+}
+.sport .midd .middle-list ul li{
+    float: left;
+    width: 174px;
+    height:340px;
+    background-color: #fff;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+.sport .midd .middle-list ul li.img-index{
+    width: 174px;
+    height: 156px;
+}
+/* 下面品牌 */
+.sport .middle-bottom{
+    width: 1200px;
+    height: 60px;
+}
+.sport .middle-bottom ul li{
+    float: left;
+    width: 120px;
+    height:60px;
 }
 /* 8.---------------------------童装--------------------------- */
 .children-clothes{
+    height: 570px;
+    margin-top: 50px;
+}
+/* 上部盒子 */
+.children-clothes .top-box{
+    width: 1200px;
+    height: 500px;
+}
+/* 顶部 */
+.children-clothes .top-box .upper{
+    width: 1200px;
+    height: 40px;
+    line-height: 41px;
+    background-color: #fff;
+    border-bottom: 6px solid #ff6700;
+}
+/* 标题 */
+.children-clothes .top-box .upper .title{
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700
+}
+/* 右侧标题导航 */
+.children-clothes .top-box .upper  ul li{
+    float: left;
+    font-size: 18px;
+    width: 100px;
+    text-align: center;
+}
+/* 右侧激活类 */
+.children-clothes .top-box .upper  ul li.activ{
+    background-color: #ff6700;
+    color: #fff;
+}
+/* 中间部分 */
+.children-clothes .middle{
+    width: 1200px;
+    height: 500px;
+    text-align: center;
+}
+/* 左边玩命约会 */
+.children-clothes .middle .middle-left{
+    width: 240px;
+    height: 500px;
+    background-color: #f9f9f9;
+}
+.children-clothes .middle .middle-left .left-img{
+    width: 240px;
+    height: 353px;
+}
+.children-clothes .middle .middle-left .bottom-text{
+    width: 236px;
+    height: 160px;
+}
+.children-clothes .middle .middle-left .bottom-text ul{
+    width: 235px;
+    height: 160px;
+    margin: 1px;
+}
+.children-clothes .middle .middle-left .bottom-text ul li{
+    float: left;
+    width: 78px;
+    height: 40px;
+    line-height: 40px;
+    text-indent: 5px;
+}
+/* 中间轮播 */
+.children-clothes .middle .middle-play{
+    width: 430px;
+    height: 500px;
+    position: relative;
+}
+/* 七夕 */
+.children-clothes .middle .middle-play .bottom-moon{
+    width: 430px;
+    height: 160px;
+    position: absolute;
+    bottom: 0px;
+}
+/* 右边凉季 */
+.children-clothes .middle .middle-list{
+    width: 530px;
     height: 500px;
     background-color: #ccc;
+}
+.children-clothes .middle .middle-list ul li{
+    float: left;
+    width: 174px;
+    height:340px;
+    background-color: #fff;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+.children-clothes .middle .middle-list ul li.img-index{
+    width: 174px;
+    height: 156px;
+}
+/* 下面品牌 */
+.children-clothes .middle-bottom{
+    width: 1200px;
+    height: 60px;
+}
+.children-clothes .middle-bottom ul li{
+    float: left;
+    width: 120px;
+    height: 60px;
 }
 /* 9.---------------------------家居日用--------------------------- */
 .daily{
+    height: 550px;
+    width: 1200px;
+    margin-top: 50px;
+}
+/* 顶部 */
+.daily .sup{
+    width: 1200px;
+    height: 40px;
+    line-height: 41px;
+    background-color: #fff;
+    border-bottom: 6px solid #ff6700;
+}
+/* 标题 */
+.daily .sup .title{
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700
+}
+/* 中间 */
+.daily .count{
+    width: 1200px;
+    height: 504px;
+}
+/* 左边 */
+.daily .count .count-left{
+    width: 490px;
     height: 500px;
-    background-color: #726d6d;
+    border:2px soild #ccc;
+}
+/* 右边 */
+.daily .count .count-right{
+    width: 713px;
+    height: 500px;
+    background-color: #ccc;
+}
+.daily .count .count-right ul li{
+    float:left;
+    width: 176px;
+    height: 330px;
+    background-color: #fff;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+.daily .count .count-right ul li.actiye{
+    width: 176px;
+    height:166px;
 }
 /* 10.---------------------------创业文具--------------------------- */
 .stationery{
-    height: 500px;
+    height: 700px;
+    width: 1200px;
+    margin-top: 30px;
+}
+/* 顶部盒子 */
+.stationery .top-stat{
+    width: 1200px;
+    height: 40px;
+    line-height: 41px;
+    color: #ff6700;
+    background-color: #fff;
+    border-bottom: 6px solid #ff6700;
+}
+.stationery .top-stat ul li{
+    width: 15px;
+    float: left;
+    height: 15px;
+    border-radius: 50%;
     background-color: #ccc;
+    margin-top: 20px;
+    margin-right: 10px;
 }
-/* 11.---------------------------地方特产--------------------------- */
-.local specialties{
-    height: 500px;
-    background-color: #726d6d;
+.stationery .top-stat ul li.active{
+    background-color: #ff6700;
 }
-/* 12.---------------------------海外购--------------------------- */
-.overseas purchase{
-    height: 500px;
-    background-color: #ccc;
+/* 标题 */
+.stationery .top-stat .title-stat{
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700;
 }
-/* 13.---------------------------电器城--------------------------- */
-.home-appliances center{
-    height: 500px;
-    background-color: #726d6d;
+.stationery .bottom-foot{
+    width: 1200x;
+    height:656px;
+    background-color: #fff;
 }
+/* 外部盒子 */
+.stationery .bottom-foot .out-box{
+    width: 1100px;
+    height: 600px;
+    margin: 20px auto;
+    /* 超出隐藏 */
+    overflow: hidden;
+}
+/* 里面盒子 */
+.stationery .bottom-foot .out-box .inner-box{
+    width: 2340px;
+    height: 600px;
+    /* 定位 */
+    position: relative;
+    left: 0;
+}
+.stationery .bottom-foot .title-bottom{
+    width: 1100px;
+    height: 600px;
+    margin: 20px auto;
+}
+.stationery .bottom-foot .title-bottom .stationery-list li{
+    width: 220px;
+    height: 300px;
+    text-align: center;
+    float: left;
+}
+.stationery .bottom-foot .title-bottom .stationery-list li img{
+    display: inline-block;
+    vertical-align: middle;
+}
+/* 第二个p标签 */
+.stationery .bottom-foot .title-bottom .stationery-list li .bottom-price{
+    font-size: 24px;
+    color: red;
+}
+.stationery .bottom-foot .title-bottom .stationery-list li:hover{
+    background-color: #f2f2f2;
+}
+
+
 /* 14.---------------------------尾部--------------------------- */
 .tail{
-    height: 500px;
-    background-color: #ccc;
+    width: 100%;
+    height: 600px;
+    margin-top: 30px;
+    position: relative;
+}
+/* 头部 */
+.tail .tail-top{
+    width: 100%;
+    height: 100px;
+    background-color: #f2f2f2;
+    border-top: 6px solid #ff6700;
+}
+.tail .tail-top ul{
+    margin-left: 230px;
+    margin-top: 20px;
+
+}
+.tail .tail-top ul li{
+    margin: 0 auto;
+    width: 250px;
+    text-align: center;
+    float: left;
+}
+/* 中间导航和logo */
+.tail .tail-middle{
+    width: 1200px;
+    height: 180px;
+    position: absolute;
+    left: 250px;
+    top:130px;
+}
+.tail .tail-middle .tail-left{
+    width: 1000px;
+    height: 180px;
+}
+.tail .tail-middle .tail-left ul li{
+    float: left;
+    width: 180px;
+    height: 180px;
+}
+.tail .tail-middle .tail-left ul li p{
+    line-height: 40px;
+    text-align: center;
+}
+.tail .tail-middle .tail-left ul li p:not(:first-child){
+    font-size: 16px;
+    color: #6c6c6c;
+}
+.tail .tail-middle .tail-left ul li p:first-child{
+    font-size: 24px;
+}
+.tail .tail-middle .tail-logo{
+    width: 200px;
+    height: 100px;
+    margin-top: 100px;
+}
+/* 尾部导航栏 */
+.tail .tail-bottom{
+    width: 1200px;
+    height: 40px;
+    position: absolute;
+    bottom: 200px;
+    left: 300px;   
+}
+.tail .tail-bottom p{
+    width: 1000px;
+    font-size: 14px;
+    margin-left: 80px;
+    line-height: 50px;
+}
+.tail .tail-bottom p:last-child{
+    font-size: 14px;
+    margin-left: 250px;
+    line-height: 50px;
+}
+
+
+
+/* 15.---------------------------返回顶部--------------------------- */
+.backToTop{
+    width: 30px;
+    height:50px;
+    /* 定位 */
+    position: fixed;
+    bottom: 100px;
+    left: 640px;
+    margin-left:50%;
+    /* 默认隐藏 */
+    display: none;
+}
+.backToTop img{
+    width: 100%;
+    height: 100%;
 }
