第十二次作业

--- a/SVNproject/trunk/css/index.css
+++ b/SVNproject/trunk/css/index.css
@@ -4,6 +4,10 @@
     height: 28px;
     background:#101010;
 }
+.topbar .label{
+    width: 100px;
+    float: left;
+}
 /* 顶部里层容器 */
 .topbar .container{
     height: 28px;
